                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 25-04-2006 changed: Removed mastercode settings from xboxmediacenter.xml - they're now only in the GUI.  Cleaned up the code + GUI look as well.
 - 25-04-2006 updated: Maltese language file (Thnx to michelbugeja)
 - 25-04-2006 changed: dvdplayer now uses xbmc filesystem for shout/http streams instead of it's own. means shoutcast information will be displayed for aacp streams
 - 25-04-2006 updated: dvdplayer ffmpeg to mplayerhq cvs and changed maxstreams to 42 instead of the standard 20 ( don't forget to update your system/dvdplayer dir )
 - 25-04-2006 fixed: directory/file date of iso discs was not read
 - 25-04-2006 updated: Italian language file (Thnx to kotix)
 - 25-04-2006 updated: Chinese (Simple) language file (Thnx to gamepc)
 - 25-04-2006 fixed: subtitles could end up disabled even if they where enabled in dvd menu
 - 25-04-2006 fixed: enable/disable of subtitles with an id higher than 8 would always fails
 - 25-04-2006 fixed: dvdplayer would restart when disabling/enabling substitles
 - 25-04-2006 changed: viz and karaoke is now separated.
 - 24-04-2006 fixed: paplayer can now play shoutcast mp3 streams
 - 24-04-2006 changed: content type is now available in the CFileItem, and thus available to players for codec selection
 - 24-04-2006 fixed: Edit/Delete source (bookmark) did not work properly from UI 
 - 24-04-2006 fixed: CFileCUrl::Exists (http reader) would return that a file at the specified url didn't exist even if it really did.
 - 24-04-2006 fixed: if a proxy port was set, shout:// would read unallocated memory.
 - 24-04-2006 updated: German language file