@@ -97,8 +97,6 @@ protected:
 //////////////////////
 //////CdgRenderer/////
 //////////////////////
-#define TEXWIDTH    512  // Texture size = power of 2
-#define TEXHEIGHT  256
 #define TEX_COLOR DWORD  //Texture color format is A8R8G8B8
 
 #define D3DFVF_CUSTOMVERTEX (D3DFVF_XYZRHW | D3DFVF_TEX1) 
